--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,20 @@
   <div class="phone">
     <div class="phone__display">
       <!-- .header>.header__text+.header__tint+.header__background -->
-      <div class="header">
+      <div class="blurred header">
         <div class="header__text">Header</div>
-        <div class="header__background"></div>
+        <div class="blurred__background"></div>
       </div>
-      <div class="phone__content">
-
+      <div class="phone__content"></div>
+      <div class="blurred footer">
+        <ul class="footer__container">
+          <li class="entypo-left-open-big"></li>
+          <li class="entypo-right-open-big"></li>
+          <li class="spacer"></li><!-- This is bad-->
+          <li class="entypo-down-open-big"></li>
+          <li class="entypo-up-open-big"></li>
+        </ul>
+        <div class="blurred__background"></div>
       </div>
     </div>
   </div>
