--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <!-- .header>.header__text+.header__tint+.header__background -->
       <div class="blurred header">
         <div class="header__text">Header</div>
-        <div class="blurred__background"></div>
+        <div class="blurred__background js-header__background"></div>
       </div>
       <div class="phone__content"></div>
       <div class="blurred footer">
